v5.6.6
- Updated - Theme description

v5.6.5
- Fixed - core/paragraph top margin in theme.json (it should be 0)

v5.6.4
- Removed - Old Customizer activation errors (if server does not match our requirements) and code.
- Updated - Navigation block custom styles to use main stylesheed as dependency
- Updated - Moved some styles from stylesheet to global styles / added blockGap (with reset on fist .wp-site-blocks children)
- Fixed - CSS: moved box sizing to global styles to fix an issue with loaders in FSE admin
- Added - WooCommerce to render fields using woocommerce_form_field() with wecodeart_input() function (excepting: state/country/select/radio)

v5.6.3
- Removed - Deprecated .site-header/footer classes
- Updated - Gutenberg block overwrites - small refactoring on their register method
- Updated - Social icons NOT to load styles for individual icons more than once (if multiple blocks are on the same page)
- Fixed - Bug with spacer height default value (in CSS processor)
- Fixed - Button double CSS rules for active style
- Fixed - Couple of wrong local translations in Romanian.
- Fixed - CSS for .text-wrap utility
- Added - Text transform utilities (uppercase/lowercase/capitalize)
- Added - Extend button styles to WooCommerce '.wc-block-components-button' class (when WOO is active)
- Added - Product search results template with legacy template block

v5.6.2
- Updated - JavaScript's SweetAlert2 and Photoswipe unpkg URLs (latest versions) / rebuild
- Updated - Added deps to custom block styles due to https://github.com/WordPress/gutenberg/pull/41934 (also updated enqueueing with negative priority)
- Updated - Cleanup some reboot.scss rules after https://github.com/WordPress/gutenberg/pull/41934 + updated theme.json headings margin
- Updated - .has-background-dim to use CSS variable instead of opacity (compatability with WooCommerce's different className approach)
- Updated - Minor adjustments to views/meta/author and views/meta/author-name templates