@@ -1,5 +1,5 @@
-<!-- wp:group {"backgroundColor":"light","className":"py-5","layout":{"inherit":true}} -->
-<div class="wp-block-group py-5 has-light-background-color has-background">
+<!-- wp:group {"align":"full","backgroundColor":"light","className":"py-5","layout":{"inherit":true}} -->
+<div class="wp-block-group alignfull py-5 has-light-background-color has-background">
     <!-- wp:columns -->
     <div class="wp-block-columns">
         <!-- wp:column {"className":"mb-3 mb-sm-0 pt-3"} -->
