@@ -1,5 +1,6 @@
 v5.6.6
 - Updated - Theme description
+- Added - query/overlay template part with new base design for post listing
 
 v5.6.5
 - Fixed - core/paragraph top margin in theme.json (it should be 0)
